@@ -1,3 +1,12 @@
+2012-01-15  WOnder93  <omosnacek@gmail.com>
+
+	* Main.cs:
+	  Fixed visual session password exposition when replacing a
+	  player in a session.
+
+	* AssemblyInfo.cs:
+	  
+
 2012-01-04  WOnder93  <omosnacek@gmail.com>
 
 	* Bang# Test Client.csproj:
